--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     </div>
     <div class="main-form">
         <div class="form-info">
-            <p>Please take a shower immediately. Also touch some grass</p>
-
+            <p> 
+                Use this form and get started quickly.
+                <br><br>
+                Create an online account with just a few clicks!
+            </p>
         </div>
 
         <div class="form-inputs">
@@ -54,9 +57,6 @@
                     </div>
                 </div>
             </form>
-            <div>
-                RULES
-            </div>
         </div>
 
         <div class="form-submit">
