--- a/index.html
+++ b/index.html
@@ -12,51 +12,63 @@
     </div>
     <div class="main-form">
         <div class="form-info">
-            <p> 
-                Use this form and get started quickly.
+            <p> Join 10 million users in getting access to the latest and greatest tool on the market. 
                 <br><br>
-                Create an online account with just a few clicks!
-            </p>
+                Use this form and get started quickly. Create an online account with just a few clicks!  </p>
         </div>
 
         <div class="form-inputs">
             <h1>Lets Get Started!</h1>
-            <form action="" id="sign-up">
-                <div class="form-row">
-                    <div>
-                        <label for="firstName"> First Name </label>
-                        <input type="text" id="firstName" required placeholder="Bob">
-                        <span></span>
+            <p>Having trouble signing up? Feel free to contact us <a href="">here</a>!</p>
+            <div class="form-data">
+                <form action="" method="post" id="sign-up">
+                    <div class="form-row">
+                        <div>
+                            <label for="firstName"> First Name </label>
+                            <input type="text" id="firstName" required placeholder="Bob">
+                            <span></span>
+                        </div>
+                        <div>
+                            <label for="lastName"> Last Name </label>
+                            <input type="text" id="lastName" placeholder="Smith">
+                        </div>
                     </div>
-                    <div>
-                        <label for="lastName"> Last Name </label>
-                        <input type="text" id="lastName" placeholder="Smith">
+                    <div class="form-row">
+                        <div>
+                            <label for="email"> Email </label>
+                            <input type="email" id="email" required placeholder="bob@gmail.com">
+                            <span></span>
+                        </div>
+                        <div>
+                            <label for="phoneNumber"> Phone Number </label>
+                            <input type="tel" id="phoneNumber" pattern="[0-9]{10}" placeholder="6474435567">
+                        </div>
                     </div>
+                    <div class="form-row">
+                        <div>
+                            <label for="password"> Password </label>
+                            <input type="password" id="password" placeholder="" required pattern="(?=.*[!@#$%^&*_=+])(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}">
+                            <span></span>
+                        </div>
+                        <div>
+                            <label for="confirmPassword"> Confirm Password </label>
+                            <input type="password" id="confirmPassword" placeholder="" required pattern="(?=.*[!@#$%^&*_=+])(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}">
+                            <span></span>
+                        </div>
+                    </div>
+                </form>
+                <div>
+                    Password rules:
+                    <ol>
+                        <li>Must contain 8 or more characters</li>
+                        <li>Must contain at least one upper case letter</li>
+                        <li>Must contain at least one lower case letter</li>
+                        <li>Must contain at least one number</li>
+                        <li>Must contain at least one of the following symbols: !@#$%^&*_=+ </li>
+                    </ol>
                 </div>
-                <div class="form-row">
-                    <div>
-                        <label for="email"> Email </label>
-                        <input type="email" id="email" required placeholder="bob@gmail.com">
-                        <span></span>
-                    </div>
-                    <div>
-                        <label for="phoneNumber"> Phone Number </label>
-                        <input type="tel" id="phoneNumber" pattern="[0-9]{10}" placeholder="6474435567">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div>
-                        <label for="password"> Password </label>
-                        <input type="password" id="password" required>
-                        <span></span>
-                    </div>
-                    <div>
-                        <label for="confirmPassword"> Confirm Password </label>
-                        <input type="password" id="confirmPassword" required>
-                        <span></span>
-                    </div>
-                </div>
-            </form>
+            </div>
+
         </div>
 
         <div class="form-submit">
