increase button width

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </form>
                 <div>
-                    Password rules:
+                    <p>Password rules:</p>
                     <ol>
                         <li>Must contain 8 or more characters</li>
                         <li>Must contain at least one upper case letter</li>
@@ -73,7 +73,7 @@
 
         <div class="form-submit">
             <button form="sign-up">Create Account</button>
-            <p>Already have an account? <a href="">Sign In Here</a></p>
+            <p>Already have an account? <a href="">Sign In</a></p>
         </div>
 
 
